--- a/lab1_vortex.ipynb
+++ b/lab1_vortex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.billboard.com/charts/hot-100\""
+    "url = \"https://www.popvortex.com/music/charts/top-100-songs.php\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -61,35 +61,35 @@
        "100"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "songs = soup.select(\n",
-    "    'div.o-chart-results-list-row-container > ul > li.lrv-u-width-100p'\n",
+    "    '.chart-wrapper > div.feed-item > div.chart-content > p.title-artist'\n",
     ")\n",
     "len(songs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "titles = []\n",
     "artists = []\n",
     "\n",
-    "for row in songs:\n",
-    "    titles.append(row.h3.get_text().strip())\n",
-    "    artists.append(row.span.get_text().strip())"
+    "for song in songs:\n",
+    "    titles.append(song.select('.title')[0].get_text())\n",
+    "    artists.append(song.select('.artist')[0].get_text())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -120,28 +120,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>All I Want For Christmas Is You</td>\n",
-       "      <td>Mariah Carey</td>\n",
+       "      <td>Separate Ways (Worlds Apart) [feat. Lzzy Hale]</td>\n",
+       "      <td>Daughtry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rockin' Around The Christmas Tree</td>\n",
-       "      <td>Brenda Lee</td>\n",
+       "      <td>Unholy</td>\n",
+       "      <td>Sam Smith &amp; Kim Petras</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Jingle Bell Rock</td>\n",
-       "      <td>Bobby Helms</td>\n",
+       "      <td>Heart Like A Truck</td>\n",
+       "      <td>Lainey Wilson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Last Christmas</td>\n",
-       "      <td>Wham!</td>\n",
+       "      <td>Anti-Hero</td>\n",
+       "      <td>Taylor Swift</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>A Holly Jolly Christmas</td>\n",
-       "      <td>Burl Ives</td>\n",
+       "      <td>Son Of A Sinner</td>\n",
+       "      <td>Jelly Roll</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -150,28 +150,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>Pick Me Up</td>\n",
-       "      <td>Gabby Barrett</td>\n",
+       "      <td>Next Thing You Know</td>\n",
+       "      <td>Jordan Davis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>SOS</td>\n",
-       "      <td>SZA</td>\n",
+       "      <td>Motorcycle Drive By</td>\n",
+       "      <td>Zach Bryan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>Forget Me</td>\n",
-       "      <td>Lewis Capaldi</td>\n",
+       "      <td>CUFF IT</td>\n",
+       "      <td>Beyoncé</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>La Jumpa</td>\n",
-       "      <td>Arcangel &amp; Bad Bunny</td>\n",
+       "      <td>Top Girls</td>\n",
+       "      <td>YoungBoy Never Broke Again</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>Gone Girl</td>\n",
-       "      <td>SZA</td>\n",
+       "      <td>Bad Habit</td>\n",
+       "      <td>Steve Lacy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -179,34 +179,47 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 Title                Artist\n",
-       "1      All I Want For Christmas Is You          Mariah Carey\n",
-       "2    Rockin' Around The Christmas Tree            Brenda Lee\n",
-       "3                     Jingle Bell Rock           Bobby Helms\n",
-       "4                       Last Christmas                 Wham!\n",
-       "5              A Holly Jolly Christmas             Burl Ives\n",
-       "..                                 ...                   ...\n",
-       "96                          Pick Me Up         Gabby Barrett\n",
-       "97                                 SOS                   SZA\n",
-       "98                           Forget Me         Lewis Capaldi\n",
-       "99                            La Jumpa  Arcangel & Bad Bunny\n",
-       "100                          Gone Girl                   SZA\n",
+       "                                              Title  \\\n",
+       "1    Separate Ways (Worlds Apart) [feat. Lzzy Hale]   \n",
+       "2                                            Unholy   \n",
+       "3                                Heart Like A Truck   \n",
+       "4                                         Anti-Hero   \n",
+       "5                                   Son Of A Sinner   \n",
+       "..                                              ...   \n",
+       "96                              Next Thing You Know   \n",
+       "97                              Motorcycle Drive By   \n",
+       "98                                          CUFF IT   \n",
+       "99                                        Top Girls   \n",
+       "100                                       Bad Habit   \n",
+       "\n",
+       "                         Artist  \n",
+       "1                      Daughtry  \n",
+       "2        Sam Smith & Kim Petras  \n",
+       "3                 Lainey Wilson  \n",
+       "4                  Taylor Swift  \n",
+       "5                    Jelly Roll  \n",
+       "..                          ...  \n",
+       "96                 Jordan Davis  \n",
+       "97                   Zach Bryan  \n",
+       "98                      Beyoncé  \n",
+       "99   YoungBoy Never Broke Again  \n",
+       "100                  Steve Lacy  \n",
        "\n",
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top100 = pd.DataFrame({\n",
+    "top100_vortex = pd.DataFrame({\n",
     "    'Title':titles,\n",
     "    'Artist':artists\n",
     "}, index=[x for x in range(1,101)])\n",
     "\n",
-    "top100"
+    "top100_vortex"
    ]
   }
  ],
@@ -226,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
