--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(url)\n",
+    "response = requests.get(url, headers={'Accept-Language':'en-US'})\n",
     "soup = BeautifulSoup(response.content, 'html.parser')"
    ]
   },
@@ -491,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
