--- a/lab1_vortex.ipynb
+++ b/lab1_vortex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "200"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "99"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -130,13 +130,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Heart Like A Truck</td>\n",
-       "      <td>Lainey Wilson</td>\n",
+       "      <td>Anti-Hero</td>\n",
+       "      <td>Taylor Swift</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Anti-Hero</td>\n",
-       "      <td>Taylor Swift</td>\n",
+       "      <td>Heart Like A Truck</td>\n",
+       "      <td>Lainey Wilson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -149,77 +149,102 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>He Stopped Loving Her Today</td>\n",
+       "      <td>George Jones</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>Next Thing You Know</td>\n",
-       "      <td>Jordan Davis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Motorcycle Drive By</td>\n",
-       "      <td>Zach Bryan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
        "      <td>CUFF IT</td>\n",
        "      <td>Beyoncé</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Top Girls</td>\n",
-       "      <td>YoungBoy Never Broke Again</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>97</th>\n",
        "      <td>Bad Habit</td>\n",
        "      <td>Steve Lacy</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>10:35</td>\n",
+       "      <td>Tiësto &amp; Tate McRae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Fenty</td>\n",
+       "      <td>French Montana &amp; NAV</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
+       "<p>99 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              Title  \\\n",
-       "1    Separate Ways (Worlds Apart) [feat. Lzzy Hale]   \n",
-       "2                                            Unholy   \n",
-       "3                                Heart Like A Truck   \n",
-       "4                                         Anti-Hero   \n",
-       "5                                   Son Of A Sinner   \n",
-       "..                                              ...   \n",
-       "96                              Next Thing You Know   \n",
-       "97                              Motorcycle Drive By   \n",
-       "98                                          CUFF IT   \n",
-       "99                                        Top Girls   \n",
-       "100                                       Bad Habit   \n",
+       "                                             Title                  Artist\n",
+       "1   Separate Ways (Worlds Apart) [feat. Lzzy Hale]                Daughtry\n",
+       "2                                           Unholy  Sam Smith & Kim Petras\n",
+       "3                                        Anti-Hero            Taylor Swift\n",
+       "4                               Heart Like A Truck           Lainey Wilson\n",
+       "5                                  Son Of A Sinner              Jelly Roll\n",
+       "..                                             ...                     ...\n",
+       "95                     He Stopped Loving Her Today            George Jones\n",
+       "96                                         CUFF IT                 Beyoncé\n",
+       "97                                       Bad Habit              Steve Lacy\n",
+       "98                                           10:35     Tiësto & Tate McRae\n",
+       "99                                           Fenty    French Montana & NAV\n",
        "\n",
-       "                         Artist  \n",
-       "1                      Daughtry  \n",
-       "2        Sam Smith & Kim Petras  \n",
-       "3                 Lainey Wilson  \n",
-       "4                  Taylor Swift  \n",
-       "5                    Jelly Roll  \n",
-       "..                          ...  \n",
-       "96                 Jordan Davis  \n",
-       "97                   Zach Bryan  \n",
-       "98                      Beyoncé  \n",
-       "99   YoungBoy Never Broke Again  \n",
-       "100                  Steve Lacy  \n",
-       "\n",
-       "[100 rows x 2 columns]"
+       "[99 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top100_vortex = pd.DataFrame({\n",
+    "top100 = pd.DataFrame({\n",
     "    'Title':titles,\n",
     "    'Artist':artists\n",
-    "}, index=[x for x in range(1,101)])\n",
+    "}, index=[x for x in range(1,len(songs)+1)])\n",
     "\n",
-    "top100_vortex"
+    "top100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your song is in the top 100!\n",
+      "How about checking out: \"Die For You\" from The Weeknd!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "user_song = input('Input a song: ')\n",
+    "\n",
+    "# lower all songs for easier input\n",
+    "top100['Title_low'] = list(map(str.lower, top100['Title']))\n",
+    "\n",
+    "# drop all rows that have the song name\n",
+    "top100_d = top100[top100['Title_low'] != user_song.lower()]\n",
+    "\n",
+    "# if rows got dropped: song in top100, recommend random song\n",
+    "if len(top100) != len(top100_d):\n",
+    "    # top limit len(top100_d)-1, because more than 1 row could have been dropped\n",
+    "    rec = top100_d.iloc[random.randint(0, len(top100_d)-1)] \n",
+    "    title = rec['Title']\n",
+    "    artist = rec['Artist']\n",
+    "    print('Your song is in the top 100!')\n",
+    "    print(f'How about checking out: \"{title}\" from {artist}!')\n",
+    "else:\n",
+    "    print('Your song is not the top 100.')\n",
+    "    print('No recommendations!')"
    ]
   }
  ],
@@ -239,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
