--- a/lab1_billboard.ipynb
+++ b/lab1_billboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "100"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,28 +120,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>All I Want For Christmas Is You</td>\n",
-       "      <td>Mariah Carey</td>\n",
+       "      <td>Anti-Hero</td>\n",
+       "      <td>Taylor Swift</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rockin' Around The Christmas Tree</td>\n",
-       "      <td>Brenda Lee</td>\n",
+       "      <td>Unholy</td>\n",
+       "      <td>Sam Smith &amp; Kim Petras</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Jingle Bell Rock</td>\n",
-       "      <td>Bobby Helms</td>\n",
+       "      <td>Kill Bill</td>\n",
+       "      <td>SZA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Last Christmas</td>\n",
-       "      <td>Wham!</td>\n",
+       "      <td>I'm Good (Blue)</td>\n",
+       "      <td>David Guetta &amp; Bebe Rexha</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>A Holly Jolly Christmas</td>\n",
-       "      <td>Burl Ives</td>\n",
+       "      <td>Rich Flex</td>\n",
+       "      <td>Drake &amp; 21 Savage</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -150,27 +150,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>Pick Me Up</td>\n",
-       "      <td>Gabby Barrett</td>\n",
+       "      <td>Shut Up My Moms Calling</td>\n",
+       "      <td>Hotel Ugly</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>SOS</td>\n",
-       "      <td>SZA</td>\n",
+       "      <td>Midnight Rain</td>\n",
+       "      <td>Taylor Swift</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>Forget Me</td>\n",
-       "      <td>Lewis Capaldi</td>\n",
+       "      <td>Players</td>\n",
+       "      <td>Coi Leray</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>La Jumpa</td>\n",
-       "      <td>Arcangel &amp; Bad Bunny</td>\n",
+       "      <td>Major Distribution</td>\n",
+       "      <td>Drake &amp; 21 Savage</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>Gone Girl</td>\n",
+       "      <td>Notice Me</td>\n",
        "      <td>SZA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -179,34 +179,72 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 Title                Artist\n",
-       "1      All I Want For Christmas Is You          Mariah Carey\n",
-       "2    Rockin' Around The Christmas Tree            Brenda Lee\n",
-       "3                     Jingle Bell Rock           Bobby Helms\n",
-       "4                       Last Christmas                 Wham!\n",
-       "5              A Holly Jolly Christmas             Burl Ives\n",
-       "..                                 ...                   ...\n",
-       "96                          Pick Me Up         Gabby Barrett\n",
-       "97                                 SOS                   SZA\n",
-       "98                           Forget Me         Lewis Capaldi\n",
-       "99                            La Jumpa  Arcangel & Bad Bunny\n",
-       "100                          Gone Girl                   SZA\n",
+       "                       Title                     Artist\n",
+       "1                  Anti-Hero               Taylor Swift\n",
+       "2                     Unholy     Sam Smith & Kim Petras\n",
+       "3                  Kill Bill                        SZA\n",
+       "4            I'm Good (Blue)  David Guetta & Bebe Rexha\n",
+       "5                  Rich Flex          Drake & 21 Savage\n",
+       "..                       ...                        ...\n",
+       "96   Shut Up My Moms Calling                 Hotel Ugly\n",
+       "97             Midnight Rain               Taylor Swift\n",
+       "98                   Players                  Coi Leray\n",
+       "99        Major Distribution          Drake & 21 Savage\n",
+       "100                Notice Me                        SZA\n",
        "\n",
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top100_billboard = pd.DataFrame({\n",
+    "top100 = pd.DataFrame({\n",
     "    'Title':titles,\n",
     "    'Artist':artists\n",
     "}, index=[x for x in range(1,101)])\n",
     "\n",
-    "top100_billboard"
+    "top100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your song is not the top 100.\n",
+      "No recommendations!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "user_song = input('Input a song: ')\n",
+    "\n",
+    "# lower all songs for easier input\n",
+    "top100['Title_low'] = list(map(str.lower, top100['Title']))\n",
+    "\n",
+    "# drop all rows that have the song name\n",
+    "top100_d = top100[top100['Title_low'] != user_song.lower()]\n",
+    "\n",
+    "# if rows got dropped: song in top100, recommend random song\n",
+    "if len(top100) != len(top100_d):\n",
+    "    # top limit len(top100_d)-1, because more than 1 row could have been dropped\n",
+    "    rec = top100_d.iloc[random.randint(0, len(top100_d)-1)] \n",
+    "    title = rec['Title']\n",
+    "    artist = rec['Artist']\n",
+    "    print('Your song is in the top 100!')\n",
+    "    print(f'How about checking out: \"{title}\" from {artist}!')\n",
+    "else:\n",
+    "    print('Your song is not the top 100.')\n",
+    "    print('No recommendations!')"
    ]
   }
  ],
@@ -226,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
