--- a/lab1_billboard.ipynb
+++ b/lab1_billboard.ipynb
@@ -211,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your song is not the top 100.\n",
-      "No recommendations!\n"
+      "Your song is in the top 100!\n",
+      "How about checking out: \"On BS\" from Drake & 21 Savage!\n"
      ]
     }
    ],
