--- a/lab3_features_to_json.ipynb
+++ b/lab3_features_to_json.ipynb
@@ -2627,6 +2627,7 @@
     "                    song = {}\n",
     "                    song['id'] = t['id']\n",
     "                    song['track_name'] = t['name']\n",
+    "                    song['preview'] = t['preview_url']\n",
     "                    song['features'] = sp.audio_features(t['uri'])\n",
     "                    my_artist_features.append(song)\n",
     "        except:\n",
