--- a/wrapper/generic.ipynb
+++ b/wrapper/generic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "id": "P6Z1QB7eeJeq"
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "id": "gZmYnRSNngr7"
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,10 +65,11 @@
     "    try:\n",
     "        tracks = sp.search(q=f'{category}:{search}', type='track', limit=limit, offset=off)['tracks']['items']\n",
     "    except:\n",
-    "        logfile.write(f'\\tsomething went wrong recieving the data from the API\\n')\n",
+    "        logfile.write(f'\\t### error recieving data from the API ###\\n')\n",
     "    \n",
     "    if len(tracks) == 0:\n",
-    "        logfile.write(f'\\tno entries\\n')\n",
+    "        logfile.write(f'\\t### no entries ###\\n')\n",
+    "        return\n",
     "\n",
     "    c = 0\n",
     "    for track in tracks:\n",
@@ -78,6 +79,7 @@
     "        song['track_name'] = track['name']\n",
     "        song[category] = search\n",
     "        song['id'] = track['id']\n",
+    "        song['preview'] = track['preview_url']\n",
     "        song_pd = pd.DataFrame([song])\n",
     "        song_pd = pd.concat([song_pd, pd.json_normalize(features[0])], axis=1)\n",
     "\n",
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,18 +136,18 @@
     "# filldb(c, s.split(','))\n",
     "\n",
     "# album, artist, track, year, genre\n",
-    "# example: data = filldb('artist', ['Metallica'])"
+    "# example: data = filldb('artist', ['Metallica'], 50, 0, 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_arts_per_year(year, offset=0):\n",
-    "    arts = sp.search(q=f'year:{year}', type='artist', limit=50, offset=offset)['artists']['items']\n",
-    "    print(year, offset)\n",
+    "def get_arts_per_category(category, search, limit=50, offset=0):\n",
+    "    arts = sp.search(q=f'{category}:{search}', type='artist', limit=limit, offset=offset)['artists']['items']\n",
+    "    print(search, offset)\n",
     "    artists = [art['name'] for art in arts]\n",
     "    return artists"
    ]
@@ -157,42 +159,44 @@
    "outputs": [],
    "source": [
     "arts = []\n",
-    "for x in range(0,500,50):\n",
-    "    arts.append([get_arts_per_year(i,x) for i in range(1950,2024)])\n",
-    "\n",
-    "flat_list = [art for sublist in arts for art in sublist]\n",
-    "flat_list = [art for sublist in flat_list for art in sublist]\n",
-    "flat_list = list(set(flat_list))"
+    "for x in range(0,1000,50):\n",
+    "    try:\n",
+    "        arts.append([get_arts_per_category('year', i, offset=x) for i in range(1950,2024)])\n",
+    "    except:\n",
+    "        print('error')\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4375"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "flat_list = [art for sublist in arts for art in sublist]\n",
+    "flat_list = [art for sublist in flat_list for art in sublist]\n",
+    "flat_list = list(set(flat_list))\n",
+    "\n",
+    "with open('artists.txt', 'w') as file:\n",
+    "    for art in flat_list:\n",
+    "        file.write(f'{art}\\n')\n",
     "len(flat_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "for o in range(0,200,50):\n",
-    "    filldb('artist', flat_list, offset=o, savepoints=250)"
+    "    try:\n",
+    "        filldb('artist', flat_list, offset=o, savepoints=10)\n",
+    "    except Exception as e:\n",
+    "        with open('spotilogger.log', 'a') as logfile:\n",
+    "            logfile.write(f'some thing in the programm went wrong {e}')"
    ]
   }
  ],
