--- a/wrapper/generic.ipynb
+++ b/wrapper/generic.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import random\n",
+    "import time\n",
     "\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials"
@@ -14,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "id": "P6Z1QB7eeJeq"
    },
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "id": "gZmYnRSNngr7"
    },
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,54 +54,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def spotiwrap(category, search, limit, off):\n",
-    "    # with open('spotilogger.log', 'r') as lg:\n",
-    "    #     prevlog = lg.read()\n",
-    "        \n",
+    "def get_track_with_uri(category, search, track):\n",
+    "    song = {}\n",
+    "\n",
+    "    song['track_name'] = track['name']\n",
+    "    song[category] = search\n",
+    "    song['id'] = track['id']\n",
+    "    song['preview'] = track['preview_url']\n",
+    "    song_pd = pd.DataFrame([song])\n",
+    "    \n",
+    "    return song_pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_songs_with_features(category, search, limit, off, max_retries=5):\n",
+    "\n",
     "    logfile = open('spotilogger.log', 'a')\n",
     "    \n",
-    "    try:\n",
-    "        tracks = sp.search(q=f'{category}:{search}', type='track', limit=limit, offset=off)['tracks']['items']\n",
-    "    except:\n",
-    "        logfile.write(f'\\t### error recieving data from the API ###\\n')\n",
-    "    \n",
+    "    for i in range(max_retries):\n",
+    "        try:\n",
+    "            tracks = sp.search(q=f'{category}:{search}', type='track', limit=limit, offset=off)['tracks']['items']\n",
+    "        except:\n",
+    "            logfile.write(f'\\t### error recieving data from the API ###\\n')\n",
+    "            if i < max_retries-1:\n",
+    "                delay = 0.1 * (2 ** i)\n",
+    "                logfile.write(f'\\t### waiting for {delay} sec ###\\n')\n",
+    "                time.sleep(delay)\n",
+    "            else:\n",
+    "                logfile.write(f'\\t### max retries of {max_retries} used, will skip request ###\\n')\n",
+    "\n",
     "    if len(tracks) == 0:\n",
     "        logfile.write(f'\\t### no entries ###\\n')\n",
     "        return\n",
     "\n",
     "    c = 0\n",
+    "    track_uris = []\n",
     "    for track in tracks:\n",
-    "        song = {}\n",
-    "        features = sp.audio_features(track['uri'])\n",
-    "\n",
-    "        song['track_name'] = track['name']\n",
-    "        song[category] = search\n",
-    "        song['id'] = track['id']\n",
-    "        song['preview'] = track['preview_url']\n",
-    "        song_pd = pd.DataFrame([song])\n",
-    "        song_pd = pd.concat([song_pd, pd.json_normalize(features[0])], axis=1)\n",
+    "        song_pd= get_track_with_uri(category, search, track)\n",
+    "        track_uris.append(track['uri'])\n",
     "\n",
     "        if c == 0:\n",
-    "            songs = song_pd\n",
+    "            songs_wo_features = song_pd\n",
     "        else:\n",
-    "            songs = pd.concat([songs, song_pd], axis=0)\n",
+    "            songs_wo_features = pd.concat([songs_wo_features, song_pd], axis=0)\n",
     "        c += 1\n",
+    "\n",
+    "    songs_wo_features = songs_wo_features.reset_index(drop=True)\n",
+    "    features = pd.json_normalize(sp.audio_features(track_uris)).reset_index(drop=True)\n",
+    "    songs_with_features = pd.concat([songs_wo_features, features], axis=1)\n",
+    "\n",
     "    logfile.write(f'\\t{c} songs recieved\\n')\n",
     "    logfile.close()\n",
-    "    return songs"
+    "    \n",
+    "    return songs_with_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filldb(category, searchlist, limit=50, offset=0, savepoints=100):\n",
+    "def get_songs_from_category(category, searchlist, limit=50, offset=0, savepoints=100):\n",
     "    x = 0\n",
     "    count = len(searchlist)\n",
     "    if count > 1:\n",
@@ -108,26 +133,32 @@
     "        what = searchlist[0]\n",
     "\n",
     "    for search in searchlist:\n",
-    "\n",
     "        with open('spotilogger.log', 'a') as logfile:\n",
     "            logfile.write(f'{category}{x:6.0f}: {search}\\n')\n",
     "\n",
-    "        if x == 0:\n",
-    "            songdb = spotiwrap(category, search, limit, offset)\n",
+    "        try:\n",
+    "            if x == 0:\n",
+    "                songdb = get_songs_with_features(category, search, limit, offset)\n",
+    "            else:\n",
+    "                songdb = pd.concat([songdb, get_songs_with_features(category, search, limit, offset)], axis=0)\n",
+    "        except Exception as e:\n",
+    "            with open('spotilogger.log', 'a') as logfile:\n",
+    "                logfile.write(f'### something went wrong at datahandling: {e} ###\\n')\n",
+    "            continue\n",
     "        else:\n",
-    "            songdb = pd.concat([songdb, spotiwrap(category, search, limit, offset)])\n",
-    "        x += 1\n",
+    "            x += 1\n",
+    "            songdb[category] = search\n",
     "\n",
     "        if x % savepoints == 0:\n",
-    "            songdb.to_csv(f'YOUR_SONG_DB_{category}_{what}.csv')\n",
+    "            songdb.to_csv(f'YOUR_SONG_DB_{category}_{what}_off{offset}.csv')\n",
     "\n",
-    "    songdb.to_csv(f'YOUR_SONG_DB_{category}_{what}.csv')\n",
+    "    songdb.to_csv(f'YOUR_SONG_DB_{category}_{what}_off{offset}.csv')\n",
     "    return songdb\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,17 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arts = []\n",
-    "for x in range(0,1000,50):\n",
-    "    try:\n",
-    "        arts.append([get_arts_per_category('year', i, offset=x) for i in range(1950,2024)])\n",
-    "    except:\n",
-    "        print('error')\n",
-    "        continue"
+    "# arts = []\n",
+    "# for x in range(0,500,50):\n",
+    "#     try:\n",
+    "#         arts.append([get_arts_per_category('year', i, offset=x) for i in range(1950,2024)])\n",
+    "#     except:\n",
+    "#         print('error')\n",
+    "#         continue"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 20 songs of every 20 artists of 1380 genres:"
    ]
   },
   {
@@ -172,6 +211,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "with open('genres.txt', 'r') as f:\n",
+    "    genres = [g.replace('\\n', '') for g in f.readlines()]\n",
+    "\n",
+    "arts = []\n",
+    "for x in range(0,50,50):\n",
+    "    try:\n",
+    "        arts.append([get_arts_per_category('genre', genre, limit=20, offset=x) for genre in genres])\n",
+    "    except:\n",
+    "        print('error')\n",
+    "        continue\n",
+    "\n",
+    "# 2min 18s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8798"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flat_list = [art for sublist in arts for art in sublist]\n",
     "flat_list = [art for sublist in flat_list for art in sublist]\n",
@@ -179,24 +249,64 @@
     "\n",
     "with open('artists.txt', 'w') as file:\n",
     "    for art in flat_list:\n",
-    "        file.write(f'{art}\\n')\n",
+    "        file.write(f'{art}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('artists.txt', 'r') as f:\n",
+    "    flat_list = [g.replace('\\n', '') for g in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8798"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.shuffle(flat_list)\n",
     "len(flat_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
-    "for o in range(0,200,50):\n",
-    "    try:\n",
-    "        filldb('artist', flat_list, offset=o, savepoints=10)\n",
-    "    except Exception as e:\n",
-    "        with open('spotilogger.log', 'a') as logfile:\n",
-    "            logfile.write(f'some thing in the programm went wrong {e}')"
+    "def get_more_than_50_per(category, searches, start, end, batch_size, savepoints):\n",
+    "    for offset in range(start, end, batch_size):\n",
+    "        try:\n",
+    "            return get_songs_from_category('artist', searches, limit=batch_size, offset=offset, savepoints=savepoints)\n",
+    "        except Exception as e:\n",
+    "            with open('spotilogger.log', 'a') as logfile:\n",
+    "                logfile.write(f'FATAL!!! {e.args}')\n",
+    "            return\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_more_than_50_per('artist', flat_list, 0, 20, 20, 10)"
    ]
   }
  ],
