break out of retries

--- a/wrapper/generic.ipynb
+++ b/wrapper/generic.ipynb
@@ -91,6 +91,9 @@
     "                time.sleep(delay)\n",
     "            else:\n",
     "                logfile.write(f'\\t### max retries of {max_retries} used, will skip request ###\\n')\n",
+    "                continue\n",
+    "        else:\n",
+    "            break\n",
     "\n",
     "    if len(tracks) == 0:\n",
     "        logfile.write(f'\\t### no entries ###\\n')\n",
@@ -326,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
