--- a/lab1_billboard.ipynb
+++ b/lab1_billboard.ipynb
@@ -89,124 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Artist</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Anti-Hero</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Unholy</td>\n",
-       "      <td>Sam Smith &amp; Kim Petras</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Kill Bill</td>\n",
-       "      <td>SZA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I'm Good (Blue)</td>\n",
-       "      <td>David Guetta &amp; Bebe Rexha</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Rich Flex</td>\n",
-       "      <td>Drake &amp; 21 Savage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Shut Up My Moms Calling</td>\n",
-       "      <td>Hotel Ugly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Midnight Rain</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Players</td>\n",
-       "      <td>Coi Leray</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Major Distribution</td>\n",
-       "      <td>Drake &amp; 21 Savage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>Notice Me</td>\n",
-       "      <td>SZA</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Title                     Artist\n",
-       "1                  Anti-Hero               Taylor Swift\n",
-       "2                     Unholy     Sam Smith & Kim Petras\n",
-       "3                  Kill Bill                        SZA\n",
-       "4            I'm Good (Blue)  David Guetta & Bebe Rexha\n",
-       "5                  Rich Flex          Drake & 21 Savage\n",
-       "..                       ...                        ...\n",
-       "96   Shut Up My Moms Calling                 Hotel Ugly\n",
-       "97             Midnight Rain               Taylor Swift\n",
-       "98                   Players                  Coi Leray\n",
-       "99        Major Distribution          Drake & 21 Savage\n",
-       "100                Notice Me                        SZA\n",
-       "\n",
-       "[100 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top100 = pd.DataFrame({\n",
     "    'Title':titles,\n",
     "    'Artist':artists\n",
     "}, index=[x for x in range(1,101)])\n",
     "\n",
-    "top100"
+    "top100.to_csv('wrapper/top100_billboard.csv', index=False)"
    ]
   },
   {
